--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transformers</title>
-    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="dist/styles/main.scss">
 </head>
 <body>
     <section class="hero">
